[header] Fix Form alignment

--- a/skins/contrib/Sabayon/global.css
+++ b/skins/contrib/Sabayon/global.css
@@ -75,6 +75,7 @@
         padding: 0;
         list-style-type: none;
 		float: left;
+		line-height: 4em;
     }
 
     ul.links li {
@@ -99,9 +100,18 @@
 /* searchbox (begin)   */
 	#searchbox {
 		float: right;
+		line-height: 4em;
 	}
 
-	#searchbox input {
+	#searchbox input #quicksearch_top {
+		border: 1px solid #666;
+		background-color: #222;
+		height: 19px;
+		color: #FFF;
+		padding: 1px 0 0 0;
+	}
+	
+	#searchbox input #find_top {
 		border: 1px solid #666;
 		background-color: #222;
 		height: 20px;
